# swq

./: .ghcid  .gitignore  4mazd5jzaqbzk76mh4hw3qzsd6g3zf8i-source.ac145603.js  4mazd5jzaqbzk76mh4hw3qzsd6g3zf8i-source.ac145603.js.map  687a3r6ca3i5gl4a863s5901vggfhm8s-source.122b24ac.js  687a3r6ca3i5gl4a863s5901vggfhm8s-source.122b24ac.js.map  9vsfq27a1drmlbq1jpi8z2pzmhf49cmc-source.0b3dd778.js  9vsfq27a1drmlbq1jpi8z2pzmhf49cmc-source.0b3dd778.js.map  README.md  a7g07l7l875346hc2mxq2mi2i8zvjg6d-source.c2d2ad93.js  a7g07l7l875346hc2mxq2mi2i8zvjg6d-source.c2d2ad93.js.map  a9c6zhp9b3hnw1g14pins29lbdk9q371-source.122b24ac.js  a9c6zhp9b3hnw1g14pins29lbdk9q371-source.122b24ac.js.map  ai8fjz5vmi4kfi193wlv4svq8wij0d0d-source.565a05bb.js  ai8fjz5vmi4kfi193wlv4svq8wij0d0d-source.565a05bb.js.map  b0dar0n54wnb5vamr343z5n7p2vaaq7l-source.0b3dd778.js  b0dar0n54wnb5vamr343z5n7p2vaaq7l-source.0b3dd778.js.map  c5054wjhcxqxls6q9gi59l3mcgspzk7h-source.d2e8b105.js  c5054wjhcxqxls6q9gi59l3mcgspzk7h-source.d2e8b105.js.map  docs.html  doku.md  flake.nix  hazyq8d3nv7akrl33z8igfg0z51r6nqk-source.980bf039.js  hazyq8d3nv7akrl33z8igfg0z51r6nqk-source.980bf039.js.map  i3fk7ypgijx80lvipapbyg0k8x4lzky0-source.180061fd.js  i3fk7ypgijx80lvipapbyg0k8x4lzky0-source.180061fd.js.map  index.html  index.js  jh358wbpjdfkh34qm35jrnfiwy0hqkcc-source.418d1885.js  jh358wbpjdfkh34qm35jrnfiwy0hqkcc-source.418d1885.js.map  k7d7zqjyba8yrh1dwaqdh1g2dm2bf8jv-source.581adcd9.js  kfiyvhdzqg4x3wk0licgqz4y2bwk64lz-source.0a5131b3.js  khcbbwrlcjvbi0zyqc3cbgi3c709pl89-source.122b24ac.js  nixos.nix  node_modules  package.json  (+18 more)
(+28 files in other folders)
