cabal-version:      2.4
name:               swq
version:            0.1.0.0
license:            MIT
copyright:          2022 jh
maintainer:         jhr
author:             jhr
category:           Web

executable liedle
  default-extensions: OverloadedStrings
  main-is:            Main.hs
  other-modules:
      Types
  hs-source-dirs:     src
  default-language:   Haskell2010
  build-depends:
    , base 
    , relude
    , unordered-containers
    , containers

    , text
    , bytestring
    , directory

    , wai
    , warp
    , http-types
    , lucid
    , uri-encode

    , megaparsec

  mixins:
    base hiding (Prelude),
    relude (Relude as Prelude),
    relude
